# certification

./: README.md  pyproject.toml
config/: settings.py  urls.py
sales_network/: admin.py  models.py  serializers.py  urls.py  views.py
sales_network/migrations/: 0001_initial.py  0002_initial.py  0003_alter_salesnetworkobject_products.py
users/: admin.py  models.py  permissions.py
users/migrations/: 0001_initial.py
